--- a/client/pages/contact.html
+++ b/client/pages/contact.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moto & Ride</title>
-    <link rel="icon" type="image/png" href="../assets/images/logos/2-removebg-preview.png">
-    <link rel="stylesheet" href="../../src/moto ride.css">
+    <link rel="icon" type="image/png" href="../public/favicon.ico">
+    <link rel="stylesheet" href="../src/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
             <input id="welcome_animation_input" class="welcome_animation_input" type="text" placeholder="Welcome to our store">
             </form>
             </div>
-            <img class="logo" src="../assets/images/logos/logo preview.png" width="106px" height="60px">
+            <img class="logo" src="/client/public/assets/images/logos/logo preview.png" width="106px" height="60px">
             <p class="logo_text1">Moto <span class="logo_text_span"> & Ride</span></p>
         </div>
 
@@ -33,7 +33,7 @@
                     <ul class="ul_nav">
                     <li class="li_nav"><a href="../index.html" class="a_nav">Home</a></li>
                     <li class="li_nav"><a href="contact.html" class="a_nav">Contact</a></li>
-                    <li class="li_nav"><a href="log in.html" class="a_nav">Log in</a></li>
+                    <li class="li_nav"><a href="login.html" class="a_nav">Log in</a></li>
                     <li class="li_nav"><a href="wishlist.html" class="a_nav">Wishlist</a></li>
                     <li class="li_nav"><a href="cart.html" class="a_nav">Cart</a></li>
                     </ul>
@@ -46,7 +46,7 @@
     <main>
         <section class="contact_box">
             <div class="contact_img">
-                <img src="../assets/images/other/stylish-young-woman-motorcycle-rider-black-protective-gear-full-face-helmet-near-her-bike_141188-5481.avif" alt="">
+                <img src="/client/public/assets/images/other/stylish-young-woman-motorcycle-rider-black-protective-gear-full-face-helmet-near-her-bike_141188-5481.avif" alt="">
             </div>
 
             
@@ -188,7 +188,7 @@
             </li>
 
             <li>
-                <a href="log in.html">
+                <a href="login.html">
                     <div class="top_navigation_menu_section">
                         <i class="fa-solid fa-right-to-bracket"></i>
                         <h4>Log In / Sign In</h4>
@@ -269,6 +269,6 @@
             </li>
         </ul>
     </section>
-    <script src="../../src/moto ride.js"></script>
+    <script type="module" src="../src/main.js"></script>
 </body>
 </html>
