--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
             </form>
             </div>
             <img class="logo" src="public/assets/images/logos/logo preview.png" width="106px" height="60px">
-            <p class="logo_text1">Motooo <span class="logo_text_span"> & Ride</span></p>
+            <p class="logo_text1">Moto <span class="logo_text_span"> & Ride</span></p>
         </div>
 
             <div class="right_nav_block">
