--- a/client/pages/product.html
+++ b/client/pages/product.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Moto & Ride</title>
-    <link rel="icon" type="image/png" href="../public/favicon.ico">
-    <link rel="stylesheet" href="../src/main.css">
+    <link rel="icon" type="image/png" href="/favicon.ico">
+    <link rel="stylesheet" href="/src/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
@@ -363,6 +363,6 @@
             </li>
         </ul>
     </section>
-    <script type="module" src="../src/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
 </body>
 </html>
