--- a/client/index.html
+++ b/client/index.html
@@ -44,6 +44,155 @@
     </header>
     
     <main>
+        
+        <div class="carousel">
+            <div class="list">
+
+                <div class="item" style="background-image: url(../assets/images/images-slader/1.png);">
+                    <div class="content">
+                        <div class="title">SLIDER</div>
+                        <div class="name">OWL</div>
+                        <div class="des">Lorem ipsum, nuriel homo meshaamem li yoo kama zman ze lokeah.</div>
+                        <div class="btn">
+                            <button>See More</button>
+                            <button>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item" style="background-image: url(../assets/images/images-slader/2.jpg);">
+                    <div class="content">
+                        <div class="title">SLIDER</div>
+                        <div class="name">EAGLE</div>
+                        <div class="des">Lorem ipsum, nuriel homo meshaamem li yoo kama zman ze lokeah.</div>
+                        <div class="btn">
+                            <button>See More</button>
+                            <button>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item" style="background-image: url(../assets/images/images-slader/3.jpg);">
+                    <div class="content">
+                        <div class="title">SLIDER</div>
+                        <div class="name">CROW</div>
+                        <div class="des">Lorem ipsum, nuriel homo meshaamem li yoo kama zman ze lokeah.</div>
+                        <div class="btn">
+                            <button>See More</button>
+                            <button>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item" style="background-image: url(../assets/images/images-slader/4.jpg);">
+                    <div class="content">
+                        <div class="title">SLIDER</div>
+                        <div class="name">BUTTERFLY</div>
+                        <div class="des">Lorem ipsum, nuriel homo meshaamem li yoo kama zman ze lokeah.</div>
+                        <div class="btn">
+                            <button>See More</button>
+                            <button>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item" style="background-image: url(../assets/images/images-slader/5.jpeg);">
+                    <div class="content">
+                        <div class="title">SLIDER</div>
+                        <div class="name">OWL</div>
+                        <div class="des">Lorem ipsum, nuriel homo meshaamem li yoo kama zman ze lokeah.</div>
+                        <div class="btn">
+                            <button>See More</button>
+                            <button>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item" style="background-image: url(../assets/images/images-slader/6.jpg);">
+                    <div class="content">
+                        <div class="title">SLIDER</div>
+                        <div class="name">EAGLE</div>
+                        <div class="des">Lorem ipsum, nuriel homo meshaamem li yoo kama zman ze lokeah.</div>
+                        <div class="btn">
+                            <button>See More</button>
+                            <button>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item" style="background-image: url(../assets/images/images-slader/7.jpg);">
+                    <div class="content">
+                        <div class="title">SLIDER</div>
+                        <div class="name">KINGFISHER</div>
+                        <div class="des">Lorem ipsum, nuriel homo meshaamem li yoo kama zman ze lokeah.</div>
+                        <div class="btn">
+                            <button>See More</button>
+                            <button>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item" style="background-image: url(../assets/images/images-slader/8.jpg);">
+                    <div class="content">
+                        <div class="title">SLIDER</div>
+                        <div class="name">PARROT</div>
+                        <div class="des">Lorem ipsum, nuriel homo meshaamem li yoo kama zman ze lokeah.</div>
+                        <div class="btn">
+                            <button>See More</button>
+                            <button>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item" style="background-image: url(../assets/images/images-slader/9.jpg);">
+                    <div class="content">
+                        <div class="title">SLIDER</div>
+                        <div class="name">HERON</div>
+                        <div class="des">Lorem ipsum, nuriel homo meshaamem li yoo kama zman ze lokeah.</div>
+                        <div class="btn">
+                            <button>See More</button>
+                            <button>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item" style="background-image: url(../assets/images/images-slader/10.jpg);">
+                    <div class="content">
+                        <div class="title">SLIDER</div>
+                        <div class="name">BUTTERFLY</div>
+                        <div class="des">Lorem ipsum, nuriel homo meshaamem li yoo kama zman ze lokeah.</div>
+                        <div class="btn">
+                            <button>See More</button>
+                            <button>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="item" style="background-image: url(../assets/images/images-slader/11.jpg);">
+                    <div class="content">
+                        <div class="title">SLIDER</div>
+                        <div class="name">PARROT</div>
+                        <div class="des">Lorem ipsum, nuriel homo meshaamem li yoo kama zman ze lokeah.</div>
+                        <div class="btn">
+                            <button>See More</button>
+                            <button>Subscribe</button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- next prev buttons -->
+            <div class="arrows">
+                <button class="prev"><</button>
+                <button class="next">></button>
+            </div>
+
+            <!-- time runings -->
+            <div class="time_running"></div>
+        </div>
+
+        <!--
         <section class="header_img_super_box">
             <div class="header_img_box">
 
@@ -68,6 +217,7 @@
                 <div class="right_arrow_box"><i class="fa-solid fa-arrow-right right_arrow"></i></div>
             </div>
         </section>
+        -->
 
         <section class="catalogs">
             <div class="catalogs_box_1">
