--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,7 @@
         <div class="carousel">
             <div class="list">
 
-                <div class="item" style="background-image: url(../assets/images/images-slader/1.png);">
+                <div class="item" style="background-image: url(assets/images/images-slader/1.png);">
                     <div class="content">
                         <div class="title">SLIDER</div>
                         <div class="name">OWL</div>
@@ -60,7 +60,7 @@
                     </div>
                 </div>
 
-                <div class="item" style="background-image: url(../assets/images/images-slader/2.jpg);">
+                <div class="item" style="background-image: url(assets/images/images-slader/2.jpg);">
                     <div class="content">
                         <div class="title">SLIDER</div>
                         <div class="name">EAGLE</div>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
 
-                <div class="item" style="background-image: url(../assets/images/images-slader/3.jpg);">
+                <div class="item" style="background-image: url(assets/images/images-slader/3.jpg);">
                     <div class="content">
                         <div class="title">SLIDER</div>
                         <div class="name">CROW</div>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
 
-                <div class="item" style="background-image: url(../assets/images/images-slader/4.jpg);">
+                <div class="item" style="background-image: url(assets/images/images-slader/4.jpg);">
                     <div class="content">
                         <div class="title">SLIDER</div>
                         <div class="name">BUTTERFLY</div>
@@ -96,7 +96,7 @@
                     </div>
                 </div>
 
-                <div class="item" style="background-image: url(../assets/images/images-slader/5.jpeg);">
+                <div class="item" style="background-image: url(assets/images/images-slader/5.jpeg);">
                     <div class="content">
                         <div class="title">SLIDER</div>
                         <div class="name">OWL</div>
@@ -108,7 +108,7 @@
                     </div>
                 </div>
 
-                <div class="item" style="background-image: url(../assets/images/images-slader/6.jpg);">
+                <div class="item" style="background-image: url(assets/images/images-slader/6.jpg);">
                     <div class="content">
                         <div class="title">SLIDER</div>
                         <div class="name">EAGLE</div>
@@ -120,7 +120,7 @@
                     </div>
                 </div>
 
-                <div class="item" style="background-image: url(../assets/images/images-slader/7.jpg);">
+                <div class="item" style="background-image: url(assets/images/images-slader/7.jpg);">
                     <div class="content">
                         <div class="title">SLIDER</div>
                         <div class="name">KINGFISHER</div>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
 
-                <div class="item" style="background-image: url(../assets/images/images-slader/8.jpg);">
+                <div class="item" style="background-image: url(assets/images/images-slader/8.jpg);">
                     <div class="content">
                         <div class="title">SLIDER</div>
                         <div class="name">PARROT</div>
@@ -144,7 +144,7 @@
                     </div>
                 </div>
 
-                <div class="item" style="background-image: url(../assets/images/images-slader/9.jpg);">
+                <div class="item" style="background-image: url(assets/images/images-slader/9.jpg);">
                     <div class="content">
                         <div class="title">SLIDER</div>
                         <div class="name">HERON</div>
@@ -156,7 +156,7 @@
                     </div>
                 </div>
 
-                <div class="item" style="background-image: url(../assets/images/images-slader/10.jpg);">
+                <div class="item" style="background-image: url(assets/images/images-slader/10.jpg);">
                     <div class="content">
                         <div class="title">SLIDER</div>
                         <div class="name">BUTTERFLY</div>
@@ -168,7 +168,7 @@
                     </div>
                 </div>
 
-                <div class="item" style="background-image: url(../assets/images/images-slader/11.jpg);">
+                <div class="item" style="background-image: url(assets/images/images-slader/11.jpg);">
                     <div class="content">
                         <div class="title">SLIDER</div>
                         <div class="name">PARROT</div>
