--- a/client/pages/login.html
+++ b/client/pages/login.html
@@ -47,7 +47,7 @@
         <section class="log_in_box_wallpaper">
             <div class="log_in_glass_box">
                 <div class="log_in_box">
-                    <form action="login.html" method="post">
+                    <form action="login.html" method="get">
                         <div class="log_in">
                             <h1>Sign in</h1>
 
@@ -63,12 +63,12 @@
                             <p>Or use your email for password</p>
 
                             <div class="log_in_input_box">
-                                <input id="email" type="email" required><br>
+                                <input id="email" type="email" name="email" required><br>
                                 <label for="email">Email</label>
                             </div>
 
                             <div class="log_in_input_box">
-                                <input id="password" type="password" required><br>
+                                <input id="password" type="password" name="password" required><br>
                                 <label for="password">Password</label>
                             </div>
 
@@ -78,7 +78,7 @@
                         </div>
                     </form>
 
-                    <form action="login.html" method="post">
+                    <form action="login.html" method="get">
                         <div class="sign_up">
                             <h1>Create Account</h1>
 
@@ -94,17 +94,17 @@
                             <p>Or use your email for registration</p>
 
                             <div class="log_in_input_box">
-                                <input id="name" type="text" required><br>
+                                <input id="name" type="text" name="name" required><br>
                                 <label for="name">Username</label>
                             </div>
 
                             <div class="log_in_input_box">
-                                <input id="email" type="email" required><br>
+                                <input id="email" type="email" name="email" required><br>
                                 <label for="email">Email</label>
                             </div>
 
                             <div class="log_in_input_box">
-                                <input id="password" type="password" required><br>
+                                <input id="password" type="password" name="password" required><br>
                                 <label for="password">Password</label>
                             </div>
 
