filter and register

--- a/client/pages/catalog.html
+++ b/client/pages/catalog.html
@@ -65,31 +65,32 @@
 
                     <div>
                         <h3>Manufacturer</h3>
-                        <input type="checkbox" id="suzuki"><label for="suzuki">Suzuki</label><br>
-                        <input type="checkbox" id="Kawasaki"><label for="Kawasaki">Kawasaki</label><br>
-                        <input type="checkbox" id="Ducati"><label for="Ducati">Ducati</label><br>
-                        <input type="checkbox" id="Yamaha"><label for="Yamaha">Yamaha</label><br>
-                        <input type="checkbox" id="Honda"><label for="Honda">Honda</label><br>
-                        <input type="checkbox" id="Harly Davidson"><label for="Harly Davidson">Harly Davidson</label><br>
-                        <input type="checkbox" id="B.M.W"><label for="B.M.W">B.M.W</label>
+                        <input type="checkbox" name="brand" value="Suzuki" id="suzuki"><label for="suzuki">Suzuki</label><br>
+                        <input type="checkbox" name="brand" value="Kawasaki" id="Kawasaki"><label for="Kawasaki">Kawasaki</label><br>
+                        <input type="checkbox" name="brand" value="Ducati" id="Ducati"><label for="Ducati">Ducati</label><br>
+                        <input type="checkbox" name="brand" value="Yamaha" id="Yamaha"><label for="Yamaha">Yamaha</label><br>
+                        <input type="checkbox" name="brand" value="Honda" id="Honda"><label for="Honda">Honda</label><br>
+                        <input type="checkbox" name="brand" value="Harley Davidson" id="HarleyDavidson"><label for="HarleyDavidson">Harley Davidson</label><br>
+                        <input type="checkbox" name="brand" value="BMW" id="BMW"><label for="BMW">BMW</label><br>
+                        <input type="checkbox" name="brand" value="Triumph" id="Triumph"><label for="Triumph">Triumph</label>
                     </div><br>
 
                     <div>
                         <h3>Motorcycle type</h3>
-                        <input type="checkbox" id="Road"><label for="Road">Road</label><br>
-                        <input type="checkbox" id="Off-road"><label for="Off-road">Off-road</label><br>
-                        <input type="checkbox" id="Dual purpose"><label for="Dual purpose">Dual purpose</label><br>
-                        <input type="checkbox" id="Scooter"><label for="Scooter">Scooter</label><br> 
-                        <input type="checkbox" id="Moped"><label for="Moped">Moped</label>
+                        <input type="checkbox" name="type" value="road" id="road"><label for="road">Road</label><br>
+                        <input type="checkbox" name="type" value="off-road" id="off-road"><label for="off-road">Off-road</label><br>
+                        <input type="checkbox" name="type" value="dual-purpose" id="dual-purpose"><label for="dual-purpose">Dual purpose</label><br>
+                        <input type="checkbox" name="type" value="scooter" id="scooter"><label for="scooter">Scooter</label><br> 
+                        <input type="checkbox" name="type" value="moped" id="moped"><label for="moped">Moped</label><br>
+                        <input type="checkbox" name="type" value="sport" id="sport"><label for="sport">Sport</label>
                     </div><br>
                     
                     <div>
                         <h3>Filter by</h3>
-                        <input type="checkbox" id="Normal"><label for="Normal">Normal</label><br>
-                        <input type="checkbox" id="On sales"><label for="On sales">On sales</label><br>
-                        <input type="checkbox" id="Popular"><label for="Popular">Popular</label><br>
-                        <input type="checkbox" id="New"><label for="New">New</label><br>
-                        <input type="checkbox" id="Recomended"><label for="Recomended">Recomended</label>
+                        <input type="checkbox" name="status" value="isNormal" id="Normal"><label for="Normal">Normal</label><br>
+                        <input type="checkbox" name="status" value="isSales" id="OnSales"><label for="OnSales">On sales</label><br>
+                        <input type="checkbox" name="status" value="isPopular" id="Popular"><label for="Popular">Popular</label><br>
+                        <input type="checkbox" name="status" value="isNew" id="New"><label for="New">New</label>
                     </div><br>
                 </form>
             </section>
@@ -124,31 +125,32 @@
 
                                     <div>
                                         <h3>Manufacturer</h3>
-                                        <input type="checkbox" id="suzuki"><label for="suzuki">Suzuki</label><br>
-                                        <input type="checkbox" id="Kawasaki"><label for="Kawasaki">Kawasaki</label><br>
-                                        <input type="checkbox" id="Ducati"><label for="Ducati">Ducati</label><br>
-                                        <input type="checkbox" id="Yamaha"><label for="Yamaha">Yamaha</label><br>
-                                        <input type="checkbox" id="Honda"><label for="Honda">Honda</label><br>
-                                        <input type="checkbox" id="Harly Davidson"><label for="Harly Davidson">Harly Davidson</label><br>
-                                        <input type="checkbox" id="B.M.W"><label for="B.M.W">B.M.W</label>
+                                        <input type="checkbox" name="brand" value="Suzuki" id="suzuki_mobile"><label for="suzuki_mobile">Suzuki</label><br>
+                                        <input type="checkbox" name="brand" value="Kawasaki" id="Kawasaki_mobile"><label for="Kawasaki_mobile">Kawasaki</label><br>
+                                        <input type="checkbox" name="brand" value="Ducati" id="Ducati_mobile"><label for="Ducati_mobile">Ducati</label><br>
+                                        <input type="checkbox" name="brand" value="Yamaha" id="Yamaha_mobile"><label for="Yamaha_mobile">Yamaha</label><br>
+                                        <input type="checkbox" name="brand" value="Honda" id="Honda_mobile"><label for="Honda_mobile">Honda</label><br>
+                                        <input type="checkbox" name="brand" value="Harley Davidson" id="HarleyDavidson_mobile"><label for="HarleyDavidson_mobile">Harley Davidson</label><br>
+                                        <input type="checkbox" name="brand" value="BMW" id="BMW_mobile"><label for="BMW_mobile">BMW</label><br>
+                                        <input type="checkbox" name="brand" value="Triumph" id="Triumph_mobile"><label for="Triumph_mobile">Triumph</label>
                                     </div><br>
 
                                     <div>
                                         <h3>Motorcycle type</h3>
-                                        <input type="checkbox" id="Road"><label for="Road">Road</label><br>
-                                        <input type="checkbox" id="Off-road"><label for="Off-road">Off-road</label><br>
-                                        <input type="checkbox" id="Dual purpose"><label for="Dual purpose">Dual purpose</label><br>
-                                        <input type="checkbox" id="Scooter"><label for="Scooter">Scooter</label><br> 
-                                        <input type="checkbox" id="Moped"><label for="Moped">Moped</label>
+                                        <input type="checkbox" name="type" value="road" id="road_mobile"><label for="road_mobile">Road</label><br>
+                                        <input type="checkbox" name="type" value="off-road" id="off-road_mobile"><label for="off-road_mobile">Off-road</label><br>
+                                        <input type="checkbox" name="type" value="dual-purpose" id="dual-purpose_mobile"><label for="dual-purpose_mobile">Dual purpose</label><br>
+                                        <input type="checkbox" name="type" value="scooter" id="scooter_mobile"><label for="scooter_mobile">Scooter</label><br> 
+                                        <input type="checkbox" name="type" value="moped" id="moped_mobile"><label for="moped_mobile">Moped</label><br>
+                                        <input type="checkbox" name="type" value="sport" id="sport_mobile"><label for="sport_mobile">Sport</label>
                                     </div><br>
                                     
                                     <div>
                                         <h3>Filter by</h3>
-                                        <input type="checkbox" id="Normal"><label for="Normal">Normal</label><br>
-                                        <input type="checkbox" id="On sales"><label for="On sales">On sales</label><br>
-                                        <input type="checkbox" id="Popular"><label for="Popular">Popular</label><br>
-                                        <input type="checkbox" id="New"><label for="New">New</label><br>
-                                        <input type="checkbox" id="Recomended"><label for="Recomended">Recomended</label>
+                                        <input type="checkbox" name="status" value="isNormal" id="Normal_mobile"><label for="Normal_mobile">Normal</label><br>
+                                        <input type="checkbox" name="status" value="isSales" id="OnSales_mobile"><label for="OnSales_mobile">On sales</label><br>
+                                        <input type="checkbox" name="status" value="isPopular" id="Popular_mobile"><label for="Popular_mobile">Popular</label><br>
+                                        <input type="checkbox" name="status" value="isNew" id="New_mobile"><label for="New_mobile">New</label>
                                     </div><br>
                                 </form>
                             </section>
