--- a/client/pages/profile.html
+++ b/client/pages/profile.html
@@ -13,8 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body class="waves">
-    <header>
+<body>
+        <header>
         <nav class="nav">
         <div class="left_nav_block">
             <div class="welcome_animation_box">
@@ -31,109 +31,21 @@
                 <p class="logo_text2">Moto <span class="logo_text_span"> & Ride</span></p>
                 <div class="right_nav_block_ul_icon">
                     <ul class="ul_nav">
-                    <li class="li_nav"><a href="../index.html" class="a_nav">Home</a></li>
-                    <li class="li_nav"><a href="contact.html" class="a_nav">Contact</a></li>
-                    <li class="li_nav"><a href="login.html" class="a_nav">Log in</a></li>
-                    <li class="li_nav"><a href="wishlist.html" class="a_nav">Wishlist</a></li>
-                    <li class="li_nav"><a href="cart.html" class="a_nav">Cart</a></li>
+                    <li class="li_nav"><a href="index.html" class="a_nav">Home</a></li>
+                    <li class="li_nav"><a href="pages/contact.html" class="a_nav">Contact</a></li>
+                    <li class="li_nav"><a href="pages/login.html" class="a_nav">Log in</a></li>
+                    <li class="li_nav"><a href="pages/wishlist.html" class="a_nav">Wishlist</a></li>
+                    <li class="li_nav"><a href="pages/cart.html" class="a_nav">Cart</a></li>
                     </ul>
                     <i class="fa-solid fa-bars"></i>
                 </div>
             </div>
         </nav>
     </header>
-
     <main>
-        <section class="log_in_box_wallpaper">
-            <div class="log_in_glass_box">
-                <div class="log_in_box">
-                    <form action="login.html" method="get">
-                        <div class="log_in">
-                            <h1>Sign in</h1>
-
-                            <div class="log_in_icons_box">
-                                <ul>
-                                    <li><a href="#"><i class="fa-brands fa-square-google-plus"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-                                </ul>
-                            </div>
-
-                            <p>Or use your email for password</p>
-
-                            <div class="log_in_input_box">
-                                <input id="log_in_email_or_username" type="text" name="email/username" required><br>
-                                <label for="log_in_email_or_username">Email Or Username</label>
-                            </div>
-
-                            <div class="log_in_input_box">
-                                <input id="log_in_password" type="password" name="password" required><br>
-                                <label for="log_in_password">Password</label>
-                            </div>
-
-                            <a class="password_forgot" href="#">Forgot your password?</a>
-
-                            <button id="log_in_button">Log in</button>
-                        </div>
-                    </form>
-
-                    <form action="login.html" method="get">
-                        <div class="sign_up">
-                            <h1>Create Account</h1>
-
-                            <div class="log_in_icons_box">
-                                <ul>
-                                    <li><a href="#"><i class="fa-brands fa-square-google-plus"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-github"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
-                                </ul>
-                            </div>
-
-                            <p>Or use your email for registration</p>
-
-                            <div class="log_in_input_box">
-                                <input id="sign_in_name" type="text" name="name" required><br>
-                                <label for="sign_in_name">Username</label>
-                            </div>
-
-                            <div class="log_in_input_box">
-                                <input id="sign_in_email" type="email" name="email" required><br>
-                                <label for="sign_in_email">Email</label>
-                            </div>
-
-                            <div class="log_in_input_box">
-                                <input id="sign_in_password" type="password" name="password" required><br>
-                                <label for="sign_in_password">Password</label>
-                            </div>
-
-                            <button id="sign_in_button">Sign in</button>
-                        </div>
-                    </form>
-
-                    <div class="log_in_hello_box">
-                        <div class="welcome_back_box">
-                            <h1>Welcome Back!</h1>
-                            <p>Enter your personal details to use all of site features</p>
-                            <button id="switch_to_sign_up">sign up</button>
-                        </div>
-                        
-                        <div class="hello_friend_box">
-                            <h1>Hello, Friend!</h1>
-                            <p>register with your personal details to use all of site features</p>
-                            <button id="switch_to_sign_in">sign in</button>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="glass_box_1"></div>
-                <div class="glass_box_2"></div>
-                <div class="glass_box_3"></div>
-            </div>
-        </section>
+        <h1>HELLO USER!</h1><br><br>
+        <button id="sign_out">sign out</button>
     </main>
-
     <footer>
         <div class="footer_links_box">
         <div class="li_footer_box">
@@ -204,7 +116,7 @@
 
         <ul>
             <li>
-                <a href="../index.html">
+                <a href="index.html">
                     <div class="top_navigation_menu_section">
                         <i class="fa-solid fa-house house_icon_menue"></i>
                         <h4>Home</h4>
@@ -222,7 +134,7 @@
             </li>
 
             <li>
-                <a href="contact.html">
+                <a href="pages/contact.html">
                     <div class="top_navigation_menu_section">
                         <i class="fa-solid fa-comments"></i>
                         <h4>Contact With Our Team</h4>  
@@ -231,7 +143,7 @@
             </li>
 
             <li>
-                <a href="login.html">
+                <a href="pages/login.html">
                     <div class="top_navigation_menu_section">
                         <i class="fa-solid fa-right-to-bracket"></i>
                         <h4>Log In / Sign In</h4>
@@ -240,7 +152,7 @@
             </li>
 
             <li>
-                <a href="wishlist.html">
+                <a href="pages/wishlist.html">
                     <div class="top_navigation_menu_section">
                         <i class="fa-solid fa-heart"></i>
                         <h4>My Wishlist</h4>
@@ -249,7 +161,7 @@
             </li>
 
             <li>
-                <a href="cart.html">
+                <a href="pages/cart.html">
                     <div class="top_navigation_menu_section">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <h4>View Shopping Cart</h4>
